--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 8083
+
 ws:
   config:
     handshakeEndpoint: /ws/trivia
@@ -5,3 +8,6 @@ ws:
     applicationDestinationPrefix: /ws/app
   topic:
     players: ${ws.config.brokerPrefix}/players
+
+api:
+  users: http://localhost:8081
